--- a/configs/resource-selector.config
+++ b/configs/resource-selector.config
@@ -2,9 +2,18 @@ process {
   beforeScript = 'ulimit -c unlimited; hostname; date; pwd'
 
   // ERROR HANDLING
-  errorStrategy = { task.exitStatus in [1,2,3,4,5,6,126,127,134,135,136,137,139,140,143,245,247,249,250,255] ? 'retry' : 'terminate' }
+  //errorStrategy = { task.exitStatus in [1,2,4,5,6,126,127,134,135,136,137,139,140,143,245,247,249,250,255] ? 'retry' : 'terminate' }
+  errorStrategy = { task.exitStatus in 3 ? 'ignore' : 'retry' }
   maxErrors = '-1'
   maxRetries = 3
+
+  // UPDATING GENOMICS BDs
+  // DO NOT FAIL ON DUPLICATE SAMPLES: exit code 3
+  withLabel:updatedbserror {
+    errorStrategy = { task.exitStatus in 3 ? 'ignore' : 'terminate' }
+    maxErrors = '-1'
+    maxRetries = 3
+  }
   
   // RESOURCE MANAGEMENT //
   withLabel:smallMemory {
@@ -87,10 +96,15 @@ process {
       cpus = { params.threads }
       memory = 30.GB
   }
-  withLabel:variantCaller {
-      time = { 32.h * task.attempt }
+  withLabel:genomisDBImport {
+      time = { 24.h * task.attempt }
       cpus = { params.threads }
-      memory = 80.GB
+      memory = 150.GB
+  }
+  withLabel:variantCaller {
+      time = { 24.h * task.attempt }
+      cpus = { params.threads }
+      memory = 50.GB
   }
   withLabel:vqsr {
       cpus = { params.threads }
