--- a/configs/containers/singularity.config
+++ b/configs/containers/singularity.config
@@ -3,6 +3,7 @@ includeConfig "${projectDir}/configs/containers/base.config"
 singularity {
     enabled = true
     autoMounts = false
+    pullTimeout = 1.h
     cacheDir = "${params.containers_dir}"
 }
 
