--- a/configs/resource-selector.config
+++ b/configs/resource-selector.config
@@ -23,7 +23,7 @@ process {
   }
   withLabel:mediumMemory {
       cpus = 22
-      time = { 20.m * task.attempt }
+      time = { 24.h * task.attempt }
       memory = 5.GB
   }
   withLabel:bigMemory {
@@ -32,8 +32,8 @@ process {
       memory = 90.GB
   }
   withLabel:longRun {
-      time = 10.h
-      cpus = 24
+      time = 24.h
+      cpus = { params.threads }
       memory = 90.GB
   }
   withLabel:fastqcMem {
@@ -93,12 +93,12 @@ process {
   }
   withLabel:applyBqsr {
       time = { 15.h * task.attempt }
-      cpus = { params.threads }
+      cpus = 4
       memory = 30.GB
   }
   withLabel:genomisDBImport {
       time = { 24.h * task.attempt }
-      cpus = { params.threads }
+      cpus = 4
       memory = 150.GB
   }
   withLabel:variantCaller {
@@ -107,12 +107,12 @@ process {
       memory = 50.GB
   }
   withLabel:vqsr {
-      cpus = { params.threads }
+      cpus = 4
       time = { 24.h * task.attempt }
       memory = 100.GB
   }
   withLabel:applyVqsr {
-      cpus = { params.threads }
+      cpus = 4
       time = { 24.h * task.attempt }
       memory = 100.GB
   }
