--- a/system.config
+++ b/system.config
@@ -4,7 +4,7 @@ params { // one-time system configuration //
   queue = 'NULL'
   containers_dir = 'NULL'
   email = 'NULL'
-  study_title = 'NULL'
+  project_name = 'NULL'
 
   /************************************************************************************************
   ~ account: If using SLURM or PBSPRO, provide your cluster project or account name.
@@ -12,7 +12,7 @@ params { // one-time system configuration //
   ~ containers_dir: If using singularity containers, provide a path where the images will be stored.
     NB: The path should have sufficient storage capacity.
   ~ email: If you wish to receive information on job status.
-  ~ study_title: The name of your study/project.
+  ~ project_name: The name of your study/project with no spaces.
   /***********************************************************************************************/
 
 }
