--- a/configs/containers/base.config
+++ b/configs/containers/base.config
@@ -35,6 +35,10 @@ process {
       container = "docker://sickleinafrica/bwa_bgzip:latest"
   }
 
+  withLabel:ngstools {
+      container = "docker://sickleinafrica/bwa-samtools-bgzip:latest"
+  }
+
   withLabel:gatk {
       container = "docker://broadinstitute/gatk:latest"
   }
