--- a/configs/profile-selector.config
+++ b/configs/profile-selector.config
@@ -35,6 +35,13 @@ profiles {
     includeConfig "${projectDir}/configs/references/chm13.config"
   }
 
+  // resource selector
+  wes {
+    includeConfig "${projectDir}/configs/resourceselector/wes.config"
+  }
+  wgs {
+    includeConfig "${projectDir}/configs/resourceselector/wgs.config"
+  }
 
   // test
   test {
