--- a/configs/resourceselector/resource-selector-wes.config
+++ b/configs/resourceselector/resource-selector-wes.config
@@ -2,8 +2,8 @@ process {
   beforeScript = 'ulimit -c unlimited; hostname; date; pwd'
 
   // ERROR HANDLING
-  //errorStrategy = { task.exitStatus in [1,2,4,5,6,126,127,134,135,136,137,139,140,143,245,247,249,250,255] ? 'retry' : 'terminate' }
-  errorStrategy = { task.exitStatus in 3 ? 'ignore' : 'retry' }
+  errorStrategy = { task.exitStatus in [1,2,3,4,5,6,126,127,134,135,136,137,139,140,143,245,247,249,250,255] ? 'retry' : 'terminate' }
+  //errorStrategy = { task.exitStatus in 3 ? 'ignore' : 'retry' }
   maxErrors = '-1'
   maxRetries = 3
 
@@ -37,7 +37,7 @@ process {
       memory = 90.GB
   }
   withLabel:fastqcMem {
-      time = { 4.h * task.attempt }
+      time = { 2.h * task.attempt }
       cpus = { params.threads }
       memory = 5.GB
   }
@@ -47,9 +47,9 @@ process {
       memory = 10.GB
   }
   withLabel:readAligner {
-      time = { 20.h * task.attempt }
+      time = { 10.h * task.attempt }
       cpus = { params.threads }
-      memory = 15.GB
+      memory = 30.GB
   }
   withLabel:samConverter {
       cpus = { params.threads }
@@ -57,24 +57,24 @@ process {
       memory = 30.GB
   }
   withLabel:bamSorter {
-      time = { 30.m * task.attempt }
+      time = { 3.h * task.attempt }
       cpus = { params.threads }
       memory = 20.GB
   }
   withLabel:bamIndexer {
-      time = 10.m
+      time = 15.m
       cpus = { params.threads }
-      memory = 1.GB
+      memory = 10.GB
   }
   withLabel:fixBam {
-      time = { 1.h * task.attempt }
+      time = { 3.h * task.attempt }
       cpus = { params.threads }
-      memory = 6.GB
+      memory = 30.GB
   }
   withLabel:duplicateMarker {
       time = { 1.h * task.attempt }
       cpus = { params.threads }
-      memory = 5.GB
+      memory = 20.GB
   }
   withLabel:duplicateMarkerSpark {
       time = { 30.h * task.attempt }
@@ -123,7 +123,7 @@ process {
   }
   withLabel:deepv_caller {
       cpus = { params.threads }
-      time = { 30.h * task.attempt }
+      time = { 15.h * task.attempt }
       memory = { 50.GB * task.attempt }
   }
   withLabel:nexus_caller {
@@ -133,7 +133,7 @@ process {
   }
   withLabel:dysgu_caller {
       cpus = { params.threads }
-      time = { 25.h * task.attempt }
+      time = { 24.h * task.attempt }
       memory = 50.GB
   }
 }
