--- a/system.config
+++ b/system.config
@@ -3,6 +3,7 @@ params { // one-time system configuration //
   account = 'NULL'
   queue = 'NULL'
   containers_dir = 'NULL'
+  workspace = 'NULL'
   email = 'NULL'
   project_name = 'NULL'
 
@@ -13,6 +14,10 @@ params { // one-time system configuration //
     NB: The path should have sufficient storage capacity.
   ~ email: If you wish to receive information on job status.
   ~ project_name: The name of your study/project with no spaces.
+  ~ workspace: Path where nextflow work directories for all projects will be created. It is 
+    important to specify a path with enough storage capacity since, dependent on the project, 
+    nextflow can generate multiple intermediate files with large sizes. 
+    [Example: '/some/path/nfworkdirs/']
   /***********************************************************************************************/
 
 }
